# test_multagentes

./: 01_blog_post_crew.ipynb  crewai.ipynb  main.py  test.py
criador_de_crew/: README.md  pyproject.toml
criador_de_crew/output/: agents_20250411_191129.yaml  crew20250411_191129.py  tasks_20250411_191129.yaml
criador_de_crew/src/criador_de_crew/: crew.py  main.py
criador_de_crew/src/criador_de_crew/config/: agents.yaml  tasks.yaml
pgrs/: README.md  pyproject.toml
pgrs/src/pgrs/: crew.py
pgrs/src/pgrs/config/: agents.yaml
pgrs_gemini/: PGRS_Final.docx  README.md  pyproject.toml
pgrs_gemini/src/pgrs_gemini/: main.py
pgrs_gemini/src/pgrs_gemini/config/: tasks.yaml
projeto_test/: README.md  pyproject.toml  report.md
projeto_test/src/projeto_test/: crew.py  main.py
