[project]
name = "pgrs"
version = "0.1.0"
description = "pgrs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
pgrs = "pgrs.main:run"
run_crew = "pgrs.main:run"
train = "pgrs.main:train"
replay = "pgrs.main:replay"
test = "pgrs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
