[project]
name = "pgrs_gemini"
version = "0.1.0"
description = "pgrs_gemini using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
pgrs_gemini = "pgrs_gemini.main:run"
run_crew = "pgrs_gemini.main:run"
train = "pgrs_gemini.main:train"
replay = "pgrs_gemini.main:replay"
test = "pgrs_gemini.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
