[project]
name = "projeto_test"
version = "0.1.0"
description = "projeto_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
projeto_test = "projeto_test.main:run"
run_crew = "projeto_test.main:run"
train = "projeto_test.main:train"
replay = "projeto_test.main:replay"
test = "projeto_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
